Added Portable charger and flight earplugs.html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         <div class="checkbox-container">
         <input type="checkbox" id="EsItem7" name="EsItem7" value="Phone Charger">
         <label for="EsItem7" class="strikethrough">Phone Charger</label><br></div>
+        <div class="checkbox-container">
+        <input type="checkbox" id="EsItem8" name="EsItem8" value="Portable charger">
+        <label for="EsItem8" class="strikethrough">Portable charger</label><br></div>
     </form>
     </div>
 
@@ -234,11 +237,13 @@
         <input type="checkbox" id="SIItem3" name="SIItem3" value="Separate 100ml liquids">
         <label for="SIItem3" class="strikethrough">Separate 100ml liquids</label><br></div>
         <div class="checkbox-container">
-        <input type="checkbox" id="SIItem4" name="SIItem4" value="Water Bottle">
-        <label for="SIItem4" class="strikethrough">Water Bottle</label><br></div>
+        <input type="checkbox" id="SIItem4" name="SIItem4" value="Water Bottle - reusable">
+        <label for="SIItem4" class="strikethrough">Water Bottle - reusable</label><br></div>
         <div class="checkbox-container">
         <input type="checkbox" id="SIItem5" name="SIItem5" value="Travel Snacks">
         <label for="SIItem5" class="strikethrough">Travel Snacks</label><br></div>
+        <input type="checkbox" id="SIItem6" name="SIItem6" value="Flight earplugs (ear pressure)">
+        <label for="SIItem6" class="strikethrough">Flight earplugs (ear pressure)</label><br></div>
       </form>
       </div>
 
