--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
         <div class="checkbox-container">
         <input type="checkbox" id="SIItem5" name="SIItem5" value="Travel Snacks">
         <label for="SIItem5" class="strikethrough">Travel Snacks</label><br></div>
+         <div class="checkbox-container">
         <input type="checkbox" id="SIItem6" name="SIItem6" value="Flight earplugs (ear pressure)">
         <label for="SIItem6" class="strikethrough">Flight earplugs (ear pressure)</label><br></div>
       </form>
